# SensorsCalibration

lidar2camera/manual_calib/: CMakeLists.txt
lidar2camera/manual_calib/data/panoramic/: kalibr_cam_chain.yaml
lidar2camera/manual_calib/data/panoramic/1/: cloud.pcd
lidar2camera/manual_calib/include/: projector_lidar.hpp
lidar2camera/manual_calib/src/: run_lidar2camera.cpp
lidar2imu/auto_calib/: CMakeLists.txt
lidar2imu/auto_calib/include/: BALM.hpp  calibration.hpp  extrinsic_param.hpp  gen_BALM_feature.hpp  registration.hpp
lidar2imu/auto_calib/src/: calibration.cpp  run_lidar2imu.cpp
lidar2imu/manual_calib/: CMakeLists.txt
lidar2imu/manual_calib/include/: extrinsic_param.hpp
lidar2imu/manual_calib/src/: run_lidar2imu.cpp
lidar2lidar/auto_calib/include/: calibration.hpp
